feat: discovery of A2A agents
APIM-9547